--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+    <div id="text-window">
+            <header id="TextTitle">
+                    <h1>
+                        Inquisitor's Log:
+                    </h1>
+            </header>
+            <p>
+                (placeholder) London is the capital city of England. It is the most populous city in the  United Kingdom, 
+                with a metropolitan area of over 13 million inhabitants.</p>
+            </p>
+            <p>Standing on the River Thames, 
+                London has been a major settlement for two millennia, 
+                its history going back to its founding by the Romans.
+            </p>
+        </div>
+
     <div id="playwindow">
         <table id="pw-tabs">
             <td id="pw-tab" style="width:33%;">
@@ -24,5 +40,10 @@
             f
         </div>
     </div>
+
+    <div id="StatusW">
+            <p>TEST,              Test</p>
+        </div>
+
 </body>
 </html>
