Changed scene struct

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     
     <link rel="stylesheet" href="./assets/css/template.css" type="text/css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
     <title>Inquisitor</title>
   </head>
   <body>
