--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="./assets/css/template.css" type="text/css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Inquisitor</title>
+    <title>Warhammer 40K - Defiance</title>
   </head>
   <body>
     <div id="app"></div>
